upstream/netdata/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: netdata.lab.danielsson.us.com
      http:
        paths:
          - backend:
              service:
                name: netdata
                port:
                  name: http
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
